--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.9.1",
     "@astrojs/svelte": "^5.7.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/roboto-mono": "^5.0.19",
     "astro": "^4.13.0",
     "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
 }
