--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/roboto-mono": "^5.0.19",
     "astro": "^4.13.0",
+    "clsx": "^2.1.1",
     "svelte": "^4.2.18",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vaul-svelte": "^0.3.2"
   }
 }
