--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/check": "^0.9.1",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.0",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/roboto-mono": "^5.0.19",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.13.0",
     "clsx": "^2.1.1",
     "svelte": "^4.2.18",
